# advent_of_rust

./: .gitignore
primary_solver/: Cargo.toml
primary_solver/src/: main.rs  solver.rs
primary_solver/src/aoc2024/: day07.rs
primary_solver/src/aoc2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  dayx.rs  mod.rs
primary_solver/src/comms/: pico_sender.rs
