[package]
name = "primary_solver"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
tokio = { version = "1", features = ["full"] } # For async TCP operations
serde = { version = "1.0", features = ["derive"] } # For configuration
serde_json = "1.0" # For handling JSON if needed
anyhow = "1.0" # For error handling
regex = "1"
z3 = { version = "0.12.1"}

image = "0.25"  
imageproc = "0.25"
